--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+<!-- Add animate.css for icon/text animations -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+<!-- Font Awesome CDN (place inside <head>) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
     :root{
       --lottery-size:56px;
@@ -85,34 +90,194 @@
     .card-theme .small-muted{ color: rgba(255,255,255,0.65); }
     body.light-mode .card-theme .small-muted{ color:#64748b; }
 
-  </style>
+  /* Animate nav links on collapse */
+  .navbar-collapse.collapse.show .nav-item {
+    animation: fadeInUp 0.5s ease forwards;
+  }
+
+  @keyframes fadeInUp {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .brand-logo {
+    font-size: 1.2rem;
+    font-weight: bold;
+    background: #ffc107;
+    color: #000;
+  }
+.hero-section {
+  height: 50vh; /* half of screen height */
+  overflow: hidden;
+}
+
+.hero-img {
+  height: 50vh;
+  object-fit: cover;
+}
+
+.carousel-caption h2, 
+.carousel-caption p {
+  animation-duration: 1.5s;
+}
+
+/* Mobile adjustments */
+@media (max-width: 768px) {
+  .hero-section {
+    height: 50vh;
+  }
+  .hero-img {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+  }
+  .carousel-caption {
+    font-size: 14px;
+  }
+}
+
+.whatsapp-float {
+  position: fixed;
+  bottom: 80px; /* above the label */
+  right: 20px;
+  background: #25d366;
+  color: #fff;
+  border-radius: 50%;
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  z-index: 999;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+.whatsapp-float:hover {
+  background: #1ebc59;
+  transform: scale(1.1);
+}
+
+.whatsapp-label {
+  position: fixed;
+  bottom: 30px;
+  right: 20px;
+  background: #fff;
+  color: #333;
+  padding: 6px 12px;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 500;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+  z-index: 998;
+  transition: opacity 0.3s ease;
+}
+
+/* Hidden state */
+.whatsapp-hidden {
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(20px);
+}
+</style>
+
+
 </head>
 <body class="dark-mode">
   <div class="container py-3">
-    <!-- Header -->
-    <header class="d-flex align-items-center justify-content-between mb-4">
-      <div class="d-flex align-items-center gap-3">
-        <div class="brand-logo">RF</div>
-        <div>
-          <div class="h5 mb-0">Raffle Market</div>
-          <div class="small small-muted">Lottery-styled draws powered by local businesses</div>
+    <!-- Header / Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm rounded-3 px-3 mb-4">
+  <div class="container-fluid">
+    <!-- Brand -->
+    <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+      <div class="brand-logo fw-bold bg-warning text-dark rounded-circle px-2 py-1">RF</div>
+      <span class="fw-semibold">Raffle Market</span>
+    </a>
+
+    <!-- Toggle button for mobile -->
+    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Collapsible Content -->
+    <div class="collapse navbar-collapse" id="navbarMenu">
+      <ul class="navbar-nav ms-auto align-items-lg-center gap-2">
+        <!-- Welcome text -->
+        <li class="nav-item text-center text-lg-end">
+          <div class="fw-bold text-warning">Welcome, Guest</div>
+          <div class="small small-muted"> <span id="local-time"></span></div>
+        </li>
+
+        <!-- Buttons -->
+        <li class="nav-item">
+          <button id="loginBtn" class="btn btn-sm btn-outline-light w-100" data-bs-toggle="modal" data-bs-target="#loginModal">
+            Login
+          </button>
+        </li>
+        <li class="nav-item">
+          <button id="registerBtn" class="btn btn-sm btn-warning text-dark w-100" data-bs-toggle="modal" data-bs-target="#registerModal">
+            Register
+          </button>
+        </li>
+        <li class="nav-item">
+          <button id="modeToggle" class="btn btn-sm btn-outline-light w-100">
+            🌙 Dark
+          </button>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Hero Section -->
+<section class="hero-section mb-4 container">
+  <div id="heroCarousel" class="carousel slide rounded-4 shadow-lg overflow-hidden" data-bs-ride="carousel">
+    
+    <!-- Carousel Indicators -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="0" class="active"></button>
+      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="1"></button>
+      <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="2"></button>
+    </div>
+
+    <!-- Carousel Inner -->
+    <div class="carousel-inner rounded-4">
+      <div class="carousel-item active">
+        <img src="img/rice.jpeg" class="d-block w-100 hero-img" alt="Raffle Slide 1">
+        <div class="carousel-caption  d-md-block bg-dark bg-opacity-50 p-3 rounded-3">
+          <h2 class="animate__animated animate__fadeInDown fw-bold text-warning">Welcome to Raffle Market</h2>
+          <p class="animate__animated animate__fadeInUp text-light">Play. Win. Celebrate!</p>
         </div>
       </div>
 
-      <div class="text-end">
-        <div class="d-flex align-items-center gap-2 justify-content-end">
-          <div class="me-3 text-end">
-            <div class="fw-bold text-warning">Welcome, Guest</div>
-            <div class="small small-muted">Local time: <span id="local-time"></span></div>
-          </div>
-          <div class="d-flex gap-2">
-            <button id="loginBtn" class="btn btn-sm btn-outline-light custom" data-bs-toggle="modal" data-bs-target="#loginModal">Login</button>
-            <button id="registerBtn" class="btn btn-sm btn-warning text-dark" data-bs-toggle="modal" data-bs-target="#registerModal">Register</button>
-            <button id="modeToggle" class="btn btn-sm btn-outline-light custom">🌙 Dark</button>
-          </div>
+      <div class="carousel-item">
+        <img src="img/tv.jpeg" class="d-block w-100 hero-img" alt="Raffle Slide 2">
+        <div class="carousel-caption  d-md-block bg-dark bg-opacity-50 p-3 rounded-3">
+          <h2 class="animate__animated animate__fadeInDown fw-bold text-warning">Your Chance to Win Big</h2>
+          <p class="animate__animated animate__fadeInUp text-light">Fair, Fun & Transparent</p>
         </div>
       </div>
-    </header>
+
+      <div class="carousel-item">
+        <img src="img/phone.jpeg" class="d-block w-100 hero-img" alt="Raffle Slide 3">
+        <div class="carousel-caption  d-md-block bg-dark bg-opacity-50 p-3 rounded-3">
+          <h2 class="animate__animated animate__fadeInDown fw-bold text-warning">Join Now!</h2>
+          <p class="animate__animated animate__fadeInUp text-light">Exciting Prizes Await</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
 
     <!-- Tabs -->
     <ul class="nav nav-tabs mb-3" role="tablist">
@@ -156,6 +321,13 @@
         <div id="ticket-history" class="list-group"></div>
       </div>
     </div>
+
+    <!-- Floating WhatsApp Support -->
+<a href="https://wa.me/2349077117884" target="_blank" id="whatsappBtn" class="whatsapp-float">
+  <i class="fab fa-whatsapp"></i>
+</a>
+<div id="whatsappLabel" class="whatsapp-label">Contact Support</div>
+
 
     <footer>Prototype — frontend only. Backend & payments to be integrated later.</footer>
   </div>
@@ -275,6 +447,29 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Font Awesome -->
+<script src="https://kit.fontawesome.com/a2d9d6a66a.js" crossorigin="anonymous"></script>
+
+<!-- Scroll Hide/Show Script -->
+<script>
+let lastScroll = 0;
+window.addEventListener("scroll", function() {
+  const currentScroll = window.pageYOffset || document.documentElement.scrollTop;
+  const btn = document.getElementById("whatsappBtn");
+  const label = document.getElementById("whatsappLabel");
+
+  if (currentScroll > lastScroll) {
+    // Scrolling down → hide
+    btn.classList.add("whatsapp-hidden");
+    label.classList.add("whatsapp-hidden");
+  } else {
+    // Scrolling up → show
+    btn.classList.remove("whatsapp-hidden");
+    label.classList.remove("whatsapp-hidden");
+  }
+  lastScroll = currentScroll <= 0 ? 0 : currentScroll; // avoid negative
+});
+</script>
 
   <script>
     // Data (sample)
